Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44915

BTLE: Connection to iPad (iOS) will be terminated by remote after 30 seconds.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.2
    • 5.4.1
    • None
    • Linux, bluez 4.101
    • iOS/tvOS/watchOS

    Description

      In the current implementation of QLowEnergyController (bluez) you cannot connect to an iPad (iOS 8) longer than 30 seconds.

      After connecting to the iPad as peripheral, it sends requests to the central (QLowEnergyController) that will be ignored. According to the bluetooth ATT specification, if a request is not responded in between 30 seconds, the connection shall be closed.
      To respond appropriate, the QLowEnergyController should answer with a "Request Not Supported" message.

      I have observed this behavior with the bluez implementation of QLowEnergyController, but the other implementations maybe affected as well.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            qibjaw Christian Waßmuth
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes